[project]
name = "DDQN-action-encoding"
version = "0.1.0"
description = "Exploring how different action-encoding strategies affect the performance and stability of DDQN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[atari]>=1.2.1",
    "opencv-python>=4.12.0.88",
    "tianshou>=2.0.0b2",
    "wandb>=0.22.3",
]
