[project]
name = "DDQN-action-encoding"
version = "0.1.0"
description = "Exploring how different action-encoding strategies affect the performance and stability of DDQN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[atari]>=1.2.1",
    "opencv-python>=4.12.0.88",
    "tianshou>=2.0.0b2",
    "wandb>=0.22.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'macos'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
