[project]
name = "DDQN-action-encoding"
version = "0.1.0"
description = "Exploring how different action-encoding strategies affect the performance and stability of DDQN"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "envpool>=0.8.4; sys_platform == 'linux'",
    "gymnasium[accept-rom-license, atari]>=0.28.1",
    "opencv-python>=4.11.0.86",
    "tianshou==1.2.0",
    "wandb>=0.22.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
